Attempting to add firebase DB

--- a/angular.json
+++ b/angular.json
@@ -121,6 +121,10 @@
               "devServerTarget": "MaxRandD:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
