--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@angular/common": "~10.0.6",
     "@angular/compiler": "~10.0.6",
     "@angular/core": "~10.0.6",
+    "@angular/fire": "^6.0.2",
     "@angular/forms": "~10.0.6",
     "@angular/material": "^10.1.2",
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "angularfire": "^2.3.0",
     "bootstrap": "^4.5.0",
     "dom-to-image": "^2.6.0",
+    "firebase": "^7.17.2",
     "html2canvas": "^1.0.0-rc.7",
     "jquery": "^3.5.1",
     "jspdf": "^1.5.3",
@@ -50,6 +53,12 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.5",
+    "@angular-devkit/architect": ">= 0.900 < 0.1100",
+    "firebase-tools": "^8.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "open": "^7.0.3"
   }
 }
