--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "@stripe/stripe-js": "^1.9.0",
     "angularfire": "^2.3.0",
     "bootstrap": "^4.5.0",
     "dom-to-image": "^2.6.0",
